# SLOcate

./: .gitignore  .gitmodules  README.md  pyproject.toml
chaos/: cpu_ts-auth.yaml  cpu_ts-order.yaml  cpu_ts-route.yaml  cpu_ts-train.yaml  cpu_ts-travel.yaml  http-delay_ts-auth.yaml  http-delay_ts-order.yaml  http-delay_ts-route.yaml  http-delay_ts-train.yaml  http-delay_ts-travel.yaml  http-error_ts-auth.yaml  http-error_ts-order.yaml  http-error_ts-route.yaml  http-error_ts-train.yaml  http-error_ts-travel.yaml  memory_ts-auth.yaml  memory_ts-order.yaml  memory_ts-route.yaml  memory_ts-train.yaml  memory_ts-travel.yaml  network-delay_ts-auth.yaml  network-delay_ts-order.yaml  network-delay_ts-route.yaml  network-delay_ts-train.yaml  network-delay_ts-travel.yaml  network-loss_ts-auth.yaml  network-loss_ts-order.yaml  network-loss_ts-route.yaml  network-loss_ts-train.yaml  network-loss_ts-travel.yaml
deploy/compose/: alertmanager.yml  docker-compose.yaml  prometheus.yml  tempo.yaml
deploy/k8s/: kind-config.yaml
docs/: architecture.md  handoff-architecture-design.md  implementation-prompt.md  rca-research-report.md
experiments/: re2tt-replication.yaml  sampling-sweep.yaml
slo/specs/: ts-auth.yaml  ts-order.yaml  ts-route.yaml  ts-train.yaml  ts-travel.yaml
slo/windows/: short-catalog.yaml
src/: analysis.py  chaos_apply.py  eval_runner.py  shim.py
src/tracerca/: __main__.py  (+6 more)
tests/: test_analysis.py  test_chaos_apply.py  test_converter.py  test_eval_runner.py  test_inference_cli.py  test_ranked_output.py  test_schema.py  test_shim.py  test_train_cli.py
(+5 files in other folders)
