[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tracerca"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "scikit-learn",
    "numpy",
    "click",
    "httpx",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.setuptools.packages.find]
where = ["src"]
